--- a/tachyons.less
+++ b/tachyons.less
@@ -1,53 +1,88 @@
-@import "less/_background-size";
-@import "less/_border-colors";
-@import "less/_border-radius";
-@import "less/_border-style";
-@import "less/_border-widths";
-@import "less/_borders";
-@import "less/_box-shadow";
-@import "less/_box-sizing";
-@import "less/_clears";
-@import "less/_code";
-@import "less/_colors";
-@import "less/_coordinates";
-@import "less/_debug-children";
-@import "less/_debug-grid";
-@import "less/_debug";
-@import "less/_display";
-@import "less/_flexbox";
-@import "less/_floats";
-@import "less/_font-family";
-@import "less/_font-style";
-@import "less/_font-weight";
-@import "less/_forms";
-@import "less/_heights";
-@import "less/_hovers";
-@import "less/_images";
-@import "less/_letter-spacing";
-@import "less/_line-height";
-@import "less/_links";
-@import "less/_lists";
-@import "less/_max-widths";
-@import "less/_media-queries";
-@import "less/_module-template";
-@import "less/_normalize";
-@import "less/_opacity";
-@import "less/_outlines";
-@import "less/_overflow";
-@import "less/_position";
-@import "less/_skins";
-@import "less/_spacing";
-@import "less/_styles";
-@import "less/_tables";
-@import "less/_text-align";
-@import "less/_text-decoration";
-@import "less/_text-transform";
-@import "less/_type-scale";
-@import "less/_typography";
-@import "less/_utilities";
-@import "less/_vertical-align";
-@import "less/_visibility";
-@import "less/_white-space";
-@import "less/_widths";
-@import "less/_word-break";
-@import "less/_z-index";
+/* TACHYONS v4.1.3 | github.com/tachyons-css/tachyons */
+
+
+/*
+ *    ████████╗ █████╗  ██████╗██╗  ██╗██╗   ██╗ ██████╗ ███╗   ██╗███████╗
+ *    ╚══██╔══╝██╔══██╗██╔════╝██║  ██║╚██╗ ██╔╝██╔═══██╗████╗  ██║██╔════╝
+ *       ██║   ███████║██║     ███████║ ╚████╔╝ ██║   ██║██╔██╗ ██║███████╗
+ *       ██║   ██╔══██║██║     ██╔══██║  ╚██╔╝  ██║   ██║██║╚██╗██║╚════██║
+ *       ██║   ██║  ██║╚██████╗██║  ██║   ██║   ╚██████╔╝██║ ╚████║███████║
+ *       ╚═╝   ╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝  ╚═══╝╚══════╝
+ *
+ *    TABLE OF CONTENTS
+ *
+ *    1. External Library Includes
+ *       - Normalize.css | http://normalize.css.github.io
+ *    2. Tachyons Modules
+ *    3. Variables
+ *       - Media Queries
+ *       - Colors
+ *    4. Debugging
+ *       - Debug all
+ *       - Debug children
+ *
+ */
+
+
+/* External Library Includes */
+@import 'less/_normalize';
+
+
+/* Modules */
+@import 'less/_box-sizing';
+@import 'less/_images';
+@import 'less/_background-size';
+@import 'less/_outlines';
+@import 'less/_borders';
+@import 'less/_border-colors';
+@import 'less/_border-radius';
+@import 'less/_border-style';
+@import 'less/_border-widths';
+@import 'less/_box-shadow';
+@import 'less/_code';
+@import 'less/_coordinates';
+@import 'less/_clears';
+@import 'less/_display';
+@import 'less/_flexbox';
+@import 'less/_floats';
+@import 'less/_font-family';
+@import 'less/_font-style';
+@import 'less/_font-weight';
+@import 'less/_forms';
+@import 'less/_heights';
+@import 'less/_letter-spacing';
+@import 'less/_line-height';
+@import 'less/_links';
+@import 'less/_lists';
+@import 'less/_max-widths';
+@import 'less/_widths';
+@import 'less/_overflow';
+@import 'less/_position';
+@import 'less/_opacity';
+@import 'less/_skins';
+@import 'less/_spacing';
+@import 'less/_tables';
+@import 'less/_text-decoration';
+@import 'less/_text-align';
+@import 'less/_text-transform';
+@import 'less/_type-scale';
+@import 'less/_typography';
+@import 'less/_utilities';
+@import 'less/_visibility';
+@import 'less/_white-space';
+@import 'less/_vertical-align';
+@import 'less/_hovers';
+@import 'less/_z-index';
+@import 'less/_styles';
+
+/* Variables */
+/* Importing here will allow you to override any variables in the modules */
+@import 'less/_colors';
+@import 'less/_media-queries';
+
+/* Debugging */
+@import 'less/_debug-children';
+@import 'less/_debug-grid';
+
+/* Uncomment out the line below to help debug layout issues */
+/* @import './_debug'; */
