Update to latest version.

--- a/less/_borders.less
+++ b/less/_borders.less
@@ -1,14 +1,23 @@
 /*
 
-   BORDER BASE
+    BORDERS
+    Docs: http://tachyons.io/docs/themes/borders/
 
-   Legend
+    Base:
+      b = border
 
-   a = all
-   t = top
-   r = right
-   b = bottom
-   l = left
+    Modifiers:
+      a = all
+      t = top
+      r = right
+      b = bottom
+      l = left
+      n = none
+
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
 
 */
 
