--- a/less/_font-style.less
+++ b/less/_font-style.less
@@ -1,6 +1,12 @@
 /*
 
    FONT STYLE
+   Docs: http://tachyons.io/docs/typography/font-style/
+
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
 
 */
 
