--- a/less/_forms.less
+++ b/less/_forms.less
@@ -1,7 +1,7 @@
 /*
 
    FORMS
-
+   
 */
 
 .input-reset {
@@ -9,3 +9,8 @@
   -moz-appearance: none;
 }
 
+.button-reset::-moz-focus-inner,
+.input-reset::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
