--- a/less/_letter-spacing.less
+++ b/less/_letter-spacing.less
@@ -1,6 +1,12 @@
 /*
 
    LETTER SPACING
+   Docs: http://tachyons.io/docs/typography/tracking/
+
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
 
 */
 
