--- a/less/_line-height.less
+++ b/less/_line-height.less
@@ -1,6 +1,12 @@
 /*
 
    LINE HEIGHT / LEADING
+   Docs: http://tachyons.io/docs/typography/line-height
+
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
 
 */
 
