--- a/less/_links.less
+++ b/less/_links.less
@@ -1,6 +1,7 @@
 /*
 
    LINKS
+   Docs: http://tachyons.io/docs/elements/links/
 
 */
 
@@ -21,5 +22,6 @@
 }
 .link:focus   {
   transition: color .15s ease-in;
+  outline: 1px dotted currentColor;
 }
 
