--- a/less/_overflow.less
+++ b/less/_overflow.less
@@ -2,6 +2,11 @@
 
     OVERFLOW
 
+    Media Query Extensions:
+      -ns = not-small
+      -m  = medium
+      -l  = large
+
  */
 
 .overflow-visible { overflow: visible; }
