--- a/less/_tables.less
+++ b/less/_tables.less
@@ -1,6 +1,7 @@
 /*
 
   TABLES
+  Docs: http://tachyons.io/docs/elements/tables/
 
 */
 
@@ -9,7 +10,7 @@
     border-spacing: 0;
 }
 
-.striped--moon-gray:nth-child(odd) {
+.striped--light-silver:nth-child(odd) {
   background-color: @light-silver;
 }
 
@@ -23,4 +24,12 @@
 
 .striped--near-white:nth-child(odd) {
   background-color: @near-white;
+}
+
+.stripe-light:nth-child(odd) {
+  background-color: @white-10;
+}
+
+.stripe-dark:nth-child(odd) {
+  background-color: @black-10;
 }
