--- a/less/_text-decoration.less
+++ b/less/_text-decoration.less
@@ -1,6 +1,13 @@
 /*
 
    TEXT DECORATION
+   Docs: http://tachyons.io/docs/typography/text-decoration/
+
+
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
 
 */
 
