--- a/less/_vertical-align.less
+++ b/less/_vertical-align.less
@@ -2,6 +2,11 @@
 
    VERTICAL ALIGN
 
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
+
 */
 
 .v-base     { vertical-align: baseline; }
