--- a/less/_word-break.less
+++ b/less/_word-break.less
@@ -2,6 +2,14 @@
 
   WORD BREAK
 
+   Base:
+     word = word-break
+
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
+
 */
 
 .word-normal { word-break: normal; }
