--- a/less/_border-widths.less
+++ b/less/_border-widths.less
@@ -1,6 +1,7 @@
 /*
 
    BORDER WIDTHS
+   Docs: http://tachyons.io/docs/themes/borders/
 
    Base:
      bw = border-width
@@ -27,6 +28,7 @@
 .bw4 { border-width: 1rem; }
 .bw5 { border-width: 2rem; }
 
+/* Resets */
 .bt-0 { border-top-width: 0; }
 .br-0 { border-right-width: 0; }
 .bb-0 { border-bottom-width: 0; }
