--- a/less/_floats.less
+++ b/less/_floats.less
@@ -1,6 +1,7 @@
 /*
 
    FLOATS
+   http://tachyons.io/docs/layout/floats/
 
    1. Floated elements are automatically rendered as block level elements.
       Setting floats to display inline will fix the double margin bug in
