--- a/less/_font-family.less
+++ b/less/_font-family.less
@@ -1,6 +1,7 @@
 /*
 
    FONT FAMILY GROUPS
+   Docs: http://tachyons.io/docs/typography/font-family/
 
 */
 
@@ -60,6 +61,12 @@ code, .code {
 
 
 /* Serif Typefaces */
+
+.athelas {
+  font-family: athelas,
+               georgia,
+               serif;
+}
 
 .georgia {
   font-family: georgia,
