--- a/less/_hovers.less
+++ b/less/_hovers.less
@@ -1,7 +1,14 @@
 /*
 
   HOVER EFFECTS
+  Docs: http://tachyons.io/docs/themes/hovers/
 
+    - Dim
+    - Hide Child
+    - Underline text
+    - Grow
+    - Pointer
+    - Shadow
 
 */
 
@@ -61,7 +68,7 @@
   -moz-osx-font-smoothing: grayscale;
   backface-visibility: hidden;
   transform: translateZ(0);
-  transition: 0.25s transform ease-out;
+  transition: transform 0.25s ease-out;
 }
 
 .grow:hover,
@@ -77,7 +84,7 @@
   -moz-osx-font-smoothing: grayscale;
   backface-visibility: hidden;
   transform: translateZ(0);
-  transition: 0.25s transform ease-in-out;
+  transition: transform .25s ease-in-out;
 }
 
 .grow-large:hover,
@@ -95,10 +102,30 @@
   cursor: pointer;
 }
 
-/* Add shadow on hover */
+/* 
+   Add shadow on hover.
 
-.shadow-hover:hover,
-.shadow-hover:focus {
-  box-shadow: 0px 0px 8px 2px rgba( 0, 0, 0, 0.2 );
+   Performant box-shadow animation pattern from 
+   http://tobiasahlin.com/blog/how-to-animate-box-shadow/ 
+*/
+
+.shadow-hover::after {
+  box-shadow: 0px 0px 8px 2px rgba( 0, 0, 0, .2 );
+  opacity: 0;
+  transition: opacity .25s ease-in-out;
+}
+
+.shadow-hover:hover::after,
+.shadow-hover:focus::after {
+  opacity: 1;
+}
+
+/* Combine with classes in skins and skins-pseudo for 
+ * thousands of different transition possibilities. */
+
+.bg-animate,
+.bg-animate:hover,
+.bg-animate:focus {
+  transition: background-color .15s ease-in-out; 
 }
 
