--- a/less/_normalize.less
+++ b/less/_normalize.less
@@ -1,4 +1,4 @@
-/*! normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
+/* normalize.css v4.1.1 | MIT License | github.com/necolas/normalize.css */
 
 /**
  * 1. Change the default font family in all browsers (opinionated).
@@ -161,7 +161,7 @@ h1 {
  */
 
 mark {
-  background-color: #ff0;
+  background-color: #ffd700;
   color: #000;
 }
 
