--- a/less/_position.less
+++ b/less/_position.less
@@ -1,8 +1,14 @@
 /*
 
-    POSITIONING
+   POSITIONING
+   Docs: http://tachyons.io/docs/layout/position/
 
- */
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
+
+*/
 
 .static { position: static; }
 .relative  { position: relative; }
