--- a/less/_spacing.less
+++ b/less/_spacing.less
@@ -1,36 +1,37 @@
 /* Variables */
 
-/* Spacing Scale - based on a ratio of 1:2 */
-
-/* Media Queries */
-
 /*
    SPACING
+   Docs: http://tachyons.io/docs/layout/spacing/
 
    An eight step powers of two scale ranging from 0 to 16rem.
-   Namespaces are composable and thus highly grockable - check the legend below
 
-   Legend:
+   Base:
+     p = padding
+     m = margin
 
-   p = padding
-   m = margin
+   Modifiers:
+     a = all
+     h = horizontal
+     v = vertical
+     t = top
+     r = right
+     b = bottom
+     l = left
 
-   a = all
-   h = horizontal
-   v = vertical
-   t = top
-   r = right
-   b = bottom
-   l = left
+     0 = none
+     1 = 1st step in spacing scale
+     2 = 2nd step in spacing scale
+     3 = 3rd step in spacing scale
+     4 = 4th step in spacing scale
+     5 = 5th step in spacing scale
+     6 = 6th step in spacing scale
+     7 = 7th step in spacing scale
 
-   0 = none
-   1 = 1st step in spacing scale
-   2 = 2nd step in spacing scale
-   3 = 3rd step in spacing scale
-   4 = 4th step in spacing scale
-   5 = 5th step in spacing scale
-   6 = 6th step in spacing scale
-   7 = 7th step in spacing scale
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
 
 */
 
@@ -946,6 +947,3 @@
 @spacing-extra-large: 4rem;
 @spacing-extra-extra-large: 8rem;
 @spacing-extra-extra-extra-large: 16rem;
-@breakpoint-not-small: ~"screen and (min-width: 48em)";
-@breakpoint-medium: ~"screen and (min-width: 48em) and (max-width: 64em)";
-@breakpoint-large: ~"screen and (min-width: 64em)";
