--- a/less/_typography.less
+++ b/less/_typography.less
@@ -1,6 +1,12 @@
 /*
 
    TYPOGRAPHY
+   http://tachyons.io/docs/typography/measure/
+
+   Media Query Extensions:
+     -ns = not-small
+     -m  = medium
+     -l  = large
 
 */
 
