--- a/tachyons.less
+++ b/tachyons.less
@@ -1,13 +1,13 @@
-/* TACHYONS v4.1.3 | github.com/tachyons-css/tachyons */
-
+/*! TACHYONS v4.5.3 | http://tachyons.io */
 
 /*
- *    ████████╗ █████╗  ██████╗██╗  ██╗██╗   ██╗ ██████╗ ███╗   ██╗███████╗
- *    ╚══██╔══╝██╔══██╗██╔════╝██║  ██║╚██╗ ██╔╝██╔═══██╗████╗  ██║██╔════╝
- *       ██║   ███████║██║     ███████║ ╚████╔╝ ██║   ██║██╔██╗ ██║███████╗
- *       ██║   ██╔══██║██║     ██╔══██║  ╚██╔╝  ██║   ██║██║╚██╗██║╚════██║
- *       ██║   ██║  ██║╚██████╗██║  ██║   ██║   ╚██████╔╝██║ ╚████║███████║
- *       ╚═╝   ╚═╝  ╚═╝ ╚═════╝╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝  ╚═══╝╚══════╝
+ *
+ *      ________            ______
+ *      ___  __/_____ _________  /______  ______________________
+ *      __  /  _  __ `/  ___/_  __ \_  / / /  __ \_  __ \_  ___/
+ *      _  /   / /_/ // /__ _  / / /  /_/ // /_/ /  / / /(__  )
+ *      /_/    \__,_/ \___/ /_/ /_/_\__, / \____//_/ /_//____/
+ *                                 /____/
  *
  *    TABLE OF CONTENTS
  *
@@ -32,6 +32,7 @@
 @import 'less/_box-sizing';
 @import 'less/_images';
 @import 'less/_background-size';
+@import 'less/_background-position';
 @import 'less/_outlines';
 @import 'less/_borders';
 @import 'less/_border-colors';
@@ -60,6 +61,7 @@
 @import 'less/_position';
 @import 'less/_opacity';
 @import 'less/_skins';
+@import 'less/_skins-pseudo';
 @import 'less/_spacing';
 @import 'less/_tables';
 @import 'less/_text-decoration';
